Updates to crash report log messages. (#3)

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,8 @@ deploy/settings.yml
 deploy/google/app.yaml
 !deploy/google/app.yaml.example
 
+# Virtual environment
+venv/
+
 ### Vagrant ###
 .vagrant/
