--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -39,7 +39,7 @@ http {
 	# Logging Settings
 	##
 
-	log_format   main '$remote_addr $remote_user [$time_local] hostname=$server_name $status '
+	log_format   main '$remote_addr $remote_user [$time_local] hostname is $server_name $status '
     '"$request" $body_bytes_sent "$http_referer" '
     '"$http_user_agent" ';
 	access_log /var/log/nginx/access.log main;
