--- a/conf/filebeat.yml
+++ b/conf/filebeat.yml
@@ -25,7 +25,7 @@ processors:
  - drop_event:
      when:
         regexp:
-           message: "(/healthcheck/status/)|(auto_monitoring_size)|(tasks.collect_statistics)"
+           message: "(/healthcheck/status/)|(auto_monitoring_size)|(tasks\.collect_statistics)"
 
 #- type: log
 #  enabled: false
@@ -160,7 +160,7 @@ output.elasticsearch:
 
   # Optional index name. The default is "filebeat" plus date and generates [filebeat-]YYYY.MM.DD keys.
   # In case you modify this pattern you must update setup.template.name and setup.template.pattern accordingly.
-  index: "filebeat-omahaserver-%{+yyyy.MM.dd}"
+  # index: "filebeat-omahaserver-%{+yyyy.MM.dd}"
 
   # Optional protocol and basic auth credentials.
   #protocol: "https"
