loadbalance not neccessary

--- a/conf/filebeat.yml
+++ b/conf/filebeat.yml
@@ -164,7 +164,7 @@ output.elasticsearch:
   # Array of hosts to connect to.
   hosts: ["localhost:9200"]
   pipeline: "standard_filter"
-  loadbalance: true
+  #loadbalance: true
 
   # Optional index name. The default is "filebeat" plus date and generates [filebeat-]YYYY.MM.DD keys.
   # In case you modify this pattern you must update setup.template.name and setup.template.pattern accordingly.
